mapping tests added